<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">I\'m Driving</string>
    <string name="app_description">The objective of I\'m Driving is to prevent you from using your SmartPhone while driving. This Application is based on Oprah Winfrey\'s No Phone Zone Pledge.</string>
    <string name="GOOGLE_MAPS_API_KEY">0HefyUTypRsx59mbJo2TLf3DybRqEuqQCqqNRXw</string>
    <string name="app_tab_title_about">About</string>
    <string name="app_tab_title_settings">Settings</string>
    <string name="app_tab_title_sponsors">Sponsors</string>
    <string name="app_tab_title_credits">Credits</string>
    <string name="app_extra_title_pvtgroup">Private Group List</string>
    <string name="menu_exit">Exit Application</string>
    <string name="tab_about_know_more_desc">To know more about what No Phone Zone is and what it means, please visit the official site:</string>
    <string name="tab_about_know_more_bt">Visit the official site and Sign the Pledge</string>
    <string name="tab_settings_default_message_title">Default Message</string>
    <string name="tab_settings_default_message_desc">The text below will be sent in response to all SMS/Calls while this app is running.</string>
    <string name="tab_settings_default_message_txt">I\'m driving right now, I\'ll reply when possible.</string>
    <string name="tab_settings_bt_modify_response">Save/Modify Response</string>
    <string name="tab_settings_private_group_title">Private Group</string>
    <string name="tab_settings_private_group_desc">These people will receive your location information in the messages sent.</string>
    <string name="tab_settings_private_group_empty">There\'s no one in the list yet.</string>
    <string name="tab_settings_private_group_pre">People in the list:</string>
    <string name="tab_settings_bt_private_group_add">Add</string>
    <string name="tab_settings_bt_private_group_remove">Remove</string>
    <string name="tab_settings_cb_silent_mode">Silent mode</string>
    <string name="tab_settings_cb_silent_mode_desc">If checked, you\'ll get no audio/haptic warning that you received a message/call. (recommended)</string>
    <string name="tab_settings_cb_reply_only_contacts">Reply only to contacts</string>
    <string name="tab_settings_cb_reply_only_contacts_desc">If checked, the automatic reply SMS will be sent only to numbers on your contacts. (recommended)</string>
    <string name="tab_settings_cb_less_warnings">Send Less Messages</string>
    <string name="tab_settings_cb_less_warnings_desc">If checked, no more than 1 message per hour will be sent to the same number, while the application is active. (recommended)</string>
    <string name="tab_settings_reply_saved_toast">Response Saved</string>
    <string name="tab_settings_silent_on_toast">Silent mode ON</string>
    <string name="tab_settings_silent_off_toast">Silent mode OFF</string>
    <string name="tab_settings_reply_contacts_on_toast">Reply Only to Contacts mode ON</string>
    <string name="tab_settings_reply_contacts_off_toast">Reply Only to Contacts mode OFF</string>
    <string name="tab_settings_less_warnings_on_toast">Send Less Messages mode ON</string>
    <string name="tab_settings_less_warnings_off_toast">Send Less Messages mode OFF</string>
    <string name="tab_settings_pvt_add_toast">Contact Added to Private Group</string>
    <string name="tab_settings_pvt_exists_toast">Contact Already Exists</string>
    <string name="tab_settings_dialog_remove_title">Confirm Delete</string>
    <string name="tab_settings_dialog_remove_msg">Are you sure you want to remove %1$s (%2$s) from your Private Group?</string>
    <string name="tab_settings_dialog_remove_toast">Contact Removed from Private Group</string>
    <string name="tab_sponsors_desc">Here you can find a list of some great folks who helped make this application possible. Please take a moment to visit their Websites. Click on the logos to do so.</string>
    <string name="tab_credits_version_desc">Developed by</string>
    <string name="tab_credits_copyright">All trademarks are copyright of their respective owners\n\nNot officially supported by Oprah Winfrey</string>
    <string name="nophonezone_msg_footer">Sent using I\'m Driving by Wozia</string>
    <string name="nophonezone_msg_address">I\'m at %1$s</string>
    <string name="nophonezone_toast_sms_sent">SMS sent to</string>
    <string name="nophonezone_disclaimer_title">Disclaimer</string>
    <string name="nophonezone_disclaimer_msg">Please be aware that every SMS reply sent will be charged by your operator accordingly.\n\nThe reply message length can vary according to user language (English adds 31 chars), default reply message and if your current address is sent with the reply (for users in Private Group, full address is sent).\n\nPlease Drive Safely.\n\nAll trademarks are copyright of their respective owners\n\nNot officially supported by Oprah Winfrey</string>
    <string name="nophonezone_notification_title">I\'m Driving is running!</string>
    <string name="nophonezone_notification_msg">Exit the app using the menu.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="eula_title">License</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
</resources>
